<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00BCD4"
            android:text="@string/actividad5"
            android:textAlignment="center"
            android:textColor="#101010"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="#FB1302"
            android:onClick="agregar"
            android:text="@string/btn"
            android:textColor="#0C0C0C"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="#FD0303"
            android:onClick="eliminar"
            android:text="@string/btn2"
            android:textColor="#0C0C0C"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="#FB0303"
            android:onClick="mod_eli"
            android:text="@string/btn3"
            android:textColor="#0B0B0B"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="#FB0303"
            android:onClick="mod_eli"
            android:text="@string/btn4"
            android:textColor="#070707"
            android:textSize="36sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>